testsuite/tests/splice-imports/SI29.stderr
SI29.hs:11:10: error: [GHC-28914]
    • Level error:
      instance for ‘GHC.Internal.TH.Monad.Quote
                      GHC.Internal.TH.Monad.Q’
      is bound at levels {0, 1} but used at level -1
    • In the expression: [| id |]
      In the untyped splice: $([| id |])

